# hive-project-management

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEMPLATE_README.md  app_metadata.json  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  main.py  og_codebase_review.md  pyproject.toml  requirements.txt  run_dev.ps1  run_dev.sh  ui-design-summary.md
alembic/: env.py
alembic/versions/: 001_initial_hive_schema.py  002_roles_departments_visibility.py  003_user_profile_image_url.py
app/: main.py
app/core/: auth.py  config.py  database.py  exceptions.py  responses.py  security.py
app/models/: comment.py  department.py  enums.py  goal.py  permit.py  project.py  project_member.py  project_visibility_grant.py  status_update.py  task.py  team.py  user.py
app/schemas/: auth.py  comment.py  department.py  enums.py  goal.py  permit.py  project.py  project_member.py  project_visibility_grant.py  status_update.py  task.py  team.py  user.py
app/services/: base_service.py  comment_service.py  comment_validation.py  department_service.py  file_service.py  goal_service.py  permit_service.py  project_member_service.py  project_service.py  project_visibility.py  project_visibility_grant_service.py  task_service.py  (+3 more)
data/: app.db
docs/: database.md  project-detail-page.md  template_app_recommended_additions.md
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: seed_dev.py
tests/: conftest.py  test_project_members_permissions.py  test_tasks_permissions.py
(+84 files in other folders)
