[project]
name = "hive-project-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "PyJWT>=2.10.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
